add server.cpp to list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_BUILD_TYPE, Debug)
 
 SET(soure_library
     src/parsecmd.cpp
+    src/server.cpp
 )
 
 ADD_LIBRARY(libchat-serv STATIC "${soure_library}")
